# PocketBand

./: .gitignore  PRIVACY_POLICY.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/androidApp/: build.gradle.kts  pocketband.keystore
app/androidApp/src/main/: AndroidManifest.xml
app/androidApp/src/main/kotlin/de/nullgrad/pocketband/: MainActivity.kt  PocketBandApp.kt
app/androidApp/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/androidApp/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/design/: build.gradle.kts
app/desktopApp/: build.gradle.kts  entitlements.plist
app/desktopApp/src/jvmMain/kotlin/: Main.kt
app/ui/: build.gradle.kts
app/ui/src/androidMain/kotlin/de/nullgrad/pocketband/platform/: AndroidPlatform.kt  AndroidPrefsDataStore.kt  RecordMicrophonePermission.kt
app/ui/src/commonMain/composeResources/drawable/: engine_outline.xml  minus_thick.xml  piano.xml  waveform.xml
app/ui/src/commonMain/kotlin/de/nullgrad/pocketband/: App.kt  AppViewModel.kt  Lifecycle.kt
app/ui/src/commonMain/kotlin/de/nullgrad/pocketband/di/: InitServices.kt
app/ui/src/commonMain/kotlin/de/nullgrad/pocketband/platform/: Platform.kt  PrefsDataStore.kt
app/ui/src/commonTest/kotlin/de/nullgrad/pocketband/utils/: AppWidgetsKtTest.kt  WaveformKtTest.kt
app/ui/src/jvmMain/kotlin/de/nullgrad/pocketband/platform/: ApplePlatform.kt  ApplePrefsDataStore.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidNdkCodePlugin.kt  ComposeMultiplatformPlugin.kt  JvmJniPlugin.kt  KotlinMultiplatformPlugin.kt
build-logic/convention/src/main/kotlin/de/nullgrad/pocketband/convention/: ConfigureAndroidLibrary.kt  ConfigureAndroidNdkCode.kt  ConfigureComposeMultiplatform.kt  ConfigureJvmJni.kt  ConfigureKotlinMultiplatform.kt  DependencyInjection.kt  Libs.kt
data/audioassets/: build.gradle.kts
data/audioassets/src/commonMain/kotlin/de/nullgrad/pocketband/audioassets/: AudioAssetsModule.kt  AudioAssetsRepository.kt
data/midi/: build.gradle.kts
data/midi/src/commonMain/kotlin/de/nullgrad/pocketband/midi/: MidiModule.kt  MidiSettingsRepository.kt
data/presets/: build.gradle.kts
data/presets/src/commonMain/kotlin/de/nullgrad/pocketband/presets/: DatabasePresetRepositoryImpl.kt  PresetRepository.kt  PresetsModule.kt
data/presets/src/commonMain/sqldelight/de/nullgrad/pocketband/: PocketBandDatabase.sq
devices/audio/: build.gradle.kts
devices/audio/src/androidMain/cpp/: CMakeLists.txt
devices/audio/src/androidMain/cpp/pocketband/: CMakeLists.txt  PocketAudio.cpp  PocketAudio.h  PocketAudioAndroid.cpp  PocketAudioApple.cpp  log.h  native-lib.cpp  readerwriterqueue.h
devices/audio/src/commonMain/kotlin/de/nullgrad/pocketband/audio/: AudioInput.kt  AudioModule.kt  AudioOutput.kt  PocketPlayer.kt
devices/macos/: build.gradle.kts
devices/macos/src/jvmMain/cpp/: CMakeLists.txt  native-lib.cpp  permissions.m
devices/macos/src/jvmMain/kotlin/de/nullgrad/pocketband/macos/: MacOS.kt
devices/sensors/: build.gradle.kts
devices/sensors/src/commonMain/kotlin/de/nullgrad/pocketband/sensors/: SensorManager.kt  SensorService.kt  SensorsModule.kt
devices/stk/: build.gradle.kts
devices/stk/src/androidMain/cpp/: CMakeLists.txt
devices/stk/src/androidMain/cpp/stk/: CMakeLists.txt  LoPass.h  native-lib.cpp
devices/stk/src/androidMain/cpp/stk/include/: Stk.h
devices/stk/src/commonMain/kotlin/de/nullgrad/pocketband/stk/: Stk.kt  StkModule.kt
devices/stk/src/commonMain/stkgen/: def.txt  stkgen.gradle.kts
di/: build.gradle.kts
di/src/androidMain/kotlin/de/nullgrad/pocketband/di/: androidNativeContext.kt
di/src/commonMain/kotlin/de/nullgrad/pocketband/di/: DiCoroutines.kt  Locator.kt
domain/edit/: build.gradle.kts
domain/edit/src/commonMain/kotlin/de/nullgrad/pocketband/edit/: EditModule.kt
domain/engine/: build.gradle.kts
domain/engine/src/commonMain/kotlin/de/nullgrad/pocketband/engine/: EngineController.kt
domain/liveevents/src/commonMain/kotlin/de/nullgrad/pocketband/liveevents/: LiveEventsService.kt
domain/midi/: build.gradle.kts
domain/plugins/: build.gradle.kts
domain/recorder/: build.gradle.kts
domain/synth/: build.gradle.kts
gradle/: libs.versions.toml
images/: ic_launcher_background.xml  ic_launcher_foreground.xml
test/: build.gradle.kts
(+272 files in other folders)
